src/objects/CMSForceSites__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Additional Sites information needed for CMSForce.</description>
    <fields>
        <fullName>Site_Id__c</fullName>
        <inlineHelpText>Go to the detail page of your Site definition in Setup and copy the Id which shows in the Url of your browser.</inlineHelpText>
        <label>Site Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>The name of the Site (for reference only)</description>
        <inlineHelpText>The name of the Site (for reference only)</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Url__c</fullName>
        <inlineHelpText>Enter the full Site url as it appears in the Site definition page in setup (Default web address).</inlineHelpText>
        <label>Site Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CMSForce Sites</label>
</CustomObject>